kubernetes/db-servers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db-servers
  name: db-servers
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-servers
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: db-servers
    spec:
      containers:
      - args:
        - --default-authentication-plugin=mysql_native_password
        image: mysql
        imagePullPolicy: "Always"
        name: db-servers
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: db-servers
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: db-servers
        persistentVolumeClaim:
          claimName: db-servers
status: {}
