kubernetes/microservice-servers-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: microservice-servers
  name: microservice-servers
spec:
  ports:
  - name: "8050"
    port: 8050
    targetPort: 8080
  selector:
    io.kompose.service: microservice-servers
status:
  loadBalancer: {}
