kubernetes/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.service.type: nodeport
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbitmq
  name: rabbitmq
spec:
  ports:
  - name: "http"
    port: 5672
    targetPort: 5672
  - name: "management"
    port: 15672
    targetPort: 15672
  selector:
    io.kompose.service: rabbitmq
  type: NodePort
status:
  loadBalancer: {}
